--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+yarn.lock
+
+prod.config.js
 
 # Runtime data
 pids
@@ -59,3 +62,6 @@ typings/
 
 # next.js build output
 .next
+
+public
+dist
