--- a/package.json
+++ b/package.json
@@ -1,85 +1,67 @@
 {
   "name": "webpack4-ejs-template-example",
   "version": "1.0.0",
-  "homepage": "https://github.com/openjavascript/webpack4-ejs-template-example#readme",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/openjavascript/webpack4-ejs-template-example.git"
-  }, 
-  "bugs": {
-    "url": "https://github.com/openjavascript/webpack4-ejs-template-example/issues"
+  "main": "index.js",
+  "scripts": {
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "build": "node build/build.js",
+    "lint": "eslint --ext .js src"
   },
   "author": "suches<suches@btbtd.org>",
-  "private": true,
-  "engines": {
-    "node": ">=6",
-    "npm": ">=3"
-  },
-  "scripts": {
-    "deploy": "echo nothing",
-    "build": "rm -rf ./dist && webpack --config scripts/config/webpack.config.prod.js && npm run deploy",
-    "serve": "cross-env NODE_ENV=development webpack-dev-server --config scripts/config/webpack.config.dev.js --hot --inline --host 0.0.0.0 --disable-host-check"
+  "license": "MIT",
+  "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/plugin-proposal-function-sent": "^7.0.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "autoprefixer": "^9.3.0",
+    "babel-loader": "^8.0.4",
+    "chalk": "^2.4.1",
+    "compression-webpack-plugin": "^2.0.0",
+    "copy-webpack-plugin": "^4.5.4",
+    "css-loader": "^2.0.2",
+    "ejs-loader": "^0.3.1",
+    "eslint": "^5.8.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-html": "^5.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "expose-loader": "^0.7.5",
+    "file-loader": "^3.0.1",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.9.4",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "ora": "^3.0.0",
+    "popper.js": "^1.14.4",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-url": "^8.0.0",
+    "rimraf": "^2.6.2",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.22.0",
+    "webpack-bundle-analyzer": "^3.0.3",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10",
+    "webpack-merge": "^4.1.4"
   },
   "dependencies": {
-    "awesome-typescript-loader": "^5.2.1",
-    "axios": "^0.19.0",
-    "compile-ejs-loader": "^0.0.2",
-    "ejs-loader": "^0.3.1",
-    "ejs-render-loader": "^1.0.0",
-    "element-ui": "^2.10.0",
-    "happypack": "^5.0.0",
-    "html-loader": "^0.5.5",
-    "less": "3.8.1",
-    "less-loader": "4.1.0",
-    "lodash.merge": "^4.6.1",
-    "progress-bar-webpack-plugin": "^1.11.0",
-    "qs": "6.5.2",
-    "request": "^2.88.0",
-    "reset-css": "^4.0.1",
-    "vue": "^2.6.10",
-    "vue-axios": "^2.1.4",
-    "vue-loader": "^15.7.0",
-    "vue-router": "^3.0.6",
-    "vue-template-compiler": "^2.6.10",
-    "vuex": "^3.1.1"
-  },
-  "devDependencies": {
-    "@types/node": "~9.4.0",
-    "@types/webpack-env": "~1.13.5",
-    "autoprefixer": "~7.2.5",
-    "babel-core": "6.26.0",
-    "babel-eslint": "8.2.3",
-    "babel-jest": "22.4.3",
-    "babel-loader": "7",
-    "babel-plugin-dva-hmr": "0.4.1",
-    "babel-plugin-import": "1.5.0",
-    "babel-plugin-preval": "1.5.0",
-    "babel-plugin-syntax-dynamic-import": "6.18.0",
-    "babel-plugin-syntax-jsx": "6.18.0",
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-plugin-transform-runtime": "6.23.0",
-    "babel-preset-env": "^1.0.0",
-    "babel-preset-stage-0": "6.24.1",
-    "babel-runtime": "6.26.0",
-    "compression-webpack-plugin": "~1.1.6",
-    "copy-webpack-plugin": "~4.3.1",
-    "cross-env": "5.2.0",
-    "css-loader": "^1.0.1",
-    "cssnano": "~3.10.0",
-    "es6-promise": "~4.2.4",
-    "extract-text-webpack-plugin": "~3.0.2",
-    "favicons-webpack-plugin": "0.0.7",
-    "file-loader": "^2.0.0",
-    "html-webpack-plugin": "~2.30.1",
-    "json-loader": "~0.5.7",
-    "minimist": "~1.2.0",
-    "optimize-css-assets-webpack-plugin": "~3.2.0",
-    "postcss-loader": "^3.0.0",
-    "raw-loader": "~0.5.1",
-    "style-loader": "~0.20.1",
-    "url-loader": "~0.6.2",
-    "vue-hot-reload-api": "~2.2.4",
-    "webpack": "~3.10.0",
-    "webpack-dev-server": "~2.11.1"
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1"
   }
 }
