--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "webpack4-ejs-template-example",
+  "name": "webpack-pages",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "serve": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "build": "node build/build.js",
     "lint": "eslint --ext .js src"
   },
-  "author": "suches<suches@btbtd.org>",
+  "author": "tthd@163.com",
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.1.2",
