--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "chalk": "^2.4.1",
     "compression-webpack-plugin": "^2.0.0",
     "copy-webpack-plugin": "^4.5.4",
-    "css-loader": "^2.0.2",
+    "css-loader": "^3.2.0",
     "ejs-loader": "^0.3.1",
     "eslint": "^5.8.0",
     "eslint-config-standard": "^12.0.0",
@@ -41,6 +41,8 @@
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.9.4",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
@@ -51,7 +53,7 @@
     "postcss-url": "^8.0.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
+    "style-loader": "^1.0.0",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.22.0",
