--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "copy-webpack-plugin": "^4.5.4",
     "css-loader": "^3.2.0",
     "ejs-loader": "^0.3.1",
+    "element-ui": "^2.12.0",
     "eslint": "^5.8.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-loader": "^2.1.1",
@@ -38,7 +39,7 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "expose-loader": "^0.7.5",
-    "file-loader": "^3.0.1",
+    "file-loader": "^4.2.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.10.3",
@@ -51,11 +52,13 @@
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-url": "^8.0.0",
+    "resolve-url-loader": "^3.1.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^1.0.0",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "url-loader": "^1.1.2",
+    "vue-template-compiler": "^2.6.10",
     "webpack": "^4.22.0",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.2",
@@ -63,7 +66,10 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
-    "bootstrap": "^4.1.3",
-    "jquery": "^3.3.1"
+    "axios": "^0.19.0",
+    "vue": "^2.6.10",
+    "vue-axios": "^2.1.4",
+    "vue-loader": "^15.7.1",
+    "vue-router": "^3.1.3"
   }
 }
