--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,7 @@ typings/
 
 # Yarn Integrity file
 .yarn-integrity
+yarn.lock
 
 # dotenv environment variables file
 .env
@@ -68,3 +69,4 @@ public
 fqt-todo
 fqt-todo.zip
 dist
+
