--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "webpack4-ejs-template-example",
   "version": "1.0.0",
-  "description": "chrome browser plugin - four quadrant of time management todolist",
+  "description": "example project for continue new project",
+  "output": "dist",
   "main": "index.js",
   "scripts": {
     "serve": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
